--- a/index.html
+++ b/index.html
@@ -43,14 +43,20 @@
   display: table;
   clear: both;
 }
+
+	 
 </style>
 
 </head>
 
 <body>
+<h1> <center> A que no te puedes comer solo uno... &#9749; &#129360;&#127838;&#9749;&#128527; &#129300;</center></h1>
+<!--<h4>A que no te puedes comer solo uno... &#128527; &#129300;</h4>
 
 	<!-- Se crea el elemento contenedor del mapa -->
-	<div id="map"></div>
+	<div id="map"> </div>
+	
+<div id="copyright">Visualizador creado por Gabriel Morales - A partir de los datos Directorio Estadístico Nacional de Unidades Económicas (DENUE) 2022 del INEGI</div>
 
 <script>
 
