--- a/index.html
+++ b/index.html
@@ -1,126 +1,50 @@
-<!DOCTYPE html>
-
 <html>
 
-<head>
+	<head>
+		<meta charset="UTF-8">
+		<title>Panaderías en Tuxtla Gutiérrez, Chiapas</title>
 
-<meta charset="UTF-8">
-
-<title>Panaderías en Tuxtla</title>
-
-<!-- Se referencia la hoja de estilos de JavaScript -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
 
 <!-- Se referencia el archivo JavaScript de Leaflet -->
-<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+		<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+
+<!-- Se referencia la hoja de estilos de JavaScript -->								
+
+<!--		<link rel="stylesheet" href="lib/leaflet/leaflet.css"> -->
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+     	<link rel="stylesheet" href="map.css">
+
+		 <!--       <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script> -->
+		
+    	<script type="text/javascript" src="https://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
+		<script type="text/javascript" src="tile.stamen.js"></script>
 
 <!-- Se referencian las hojas de estilos de la extensión Leaflet.markercluster -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.0/dist/MarkerCluster.css" />
-<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.0/dist/MarkerCluster.Default.css" />
+		<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.0/dist/MarkerCluster.css" />
+		<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.0/dist/MarkerCluster.Default.css" />
 
 <!-- Se referencia el archivo JavaScript de la extensión Leaflet.markercluster -->
-<script src="https://unpkg.com/leaflet.markercluster@1.4.0/dist/leaflet.markercluster.js"></script>
+		<script src="https://unpkg.com/leaflet.markercluster@1.4.0/dist/leaflet.markercluster.js"></script>
+
+
+	<!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" /> 
+		 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script> -->
+		
 
 <!-- Se referencia el archivo de datos externos -->
 <!-- <script src="bd_pan2.geojson"></script>    -->
-<script type="text/javascript" src="bd_pan2.js"></script>
+		<script type="text/javascript" src="bd_pan2.js"></script>
+		<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
+		
+	</head>
 
-<!-- Se establecen los estilos de ancho y alto del contenedor del mapa -->
-<style>
-#map {
-	width: 1900px;
-	height:900px;
-}
-
-.column {
-  float: left;
-  width: 50%;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-	 
-</style>
-
-</head>
-
-<body>
-<h1> <center> A que no te puedes comer solo uno... &#9749; &#129360;&#127838;&#9749;&#128527; &#129300;</center></h1>
-<!--<h4>A que no te puedes comer solo uno... &#128527; &#129300;</h4>
+	<body>
+	<h1> <center> A que no te puedes comer solo uno... &#9749; &#129360;&#127838;&#9749;&#128527; &#129300;</center></h1>
 
 	<!-- Se crea el elemento contenedor del mapa -->
-	<div id="map"> </div>
-	
-<div id="copyright">Visualizador creado por Gabriel Morales - A partir de los datos Directorio Estadístico Nacional de Unidades Económicas (DENUE) 2022 del INEGI</div>
+		<div id="map"></div>
+		<div id="copyright">Visualizador creado por Gabriel Morales - A partir de los datos Directorio Estadístico Nacional de Unidades Económicas (DENUE) 2022 del INEGI</div>
 
-<script>
-
-	// Se crea un objeto mapa, se le asigna al elemento contenedor 'map' y se fijan su punto central y nivel de zum iniciales
-	var map = L.map('map').setView([16.75973, -93.11308], 13);
-
-	// Se añaden al objeto mapa las teselas de mapa a partir de OpenStreetMap y la información correspondiente de atribución 
-	var open= L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-	attribution: 'Datos &copy; <a href="http://osm.org/copyright" target="blanck">Colaboradores de OpenStreetMap</a> (<a href="http://www.openstreetmap.org/copyright" target="blanck">ODbL</a>) | Teselas <a href="https://github.com/gravitystorm/openstreetmap-carto" target="blanck">OSM Carto</a> &copy; Randy Allan y otros colaboradores (<a href="https://creativecommons.org/licenses/by-sa/2.0/deed.es" target="blanck">CC BY-SA 2.0</a>)'
-	}).addTo(map)
-	
-	var carto = L.tileLayer("https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png",{
-		"attribution": "\u0026copy; \u003ca href=\"http://www.openstreetmap.org/copyright\"\u003eOpenStreetMap\u003c/a\u003e contributors \u0026copy; \u003ca href=\"http://cartodb.com/attributions\"\u003eCartoDB\u003c/a\u003e, CartoDB \u003ca href =\"http://cartodb.com/attributions\"\u003eattributions\u003c/a\u003e", "detectRetina": false, "maxNativeZoom": 18, "maxZoom": 18, "minZoom": 0, "noWrap": false, "opacity": 1, "subdomains": "abc", "tms": false}
-    ).addTo (map);;
-
-    var googleSat = L.tileLayer('http://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}',{
-    maxZoom: 20,
-    subdomains:['mt0','mt1','mt2','mt3']
-    }).addTo (map);
-
-
-     var baseMaps = {
-	"<b>Imagen de satélite</b>": googleSat,
-	"<b>Mapa OpenStreetMap</b>": open,
-	"<b>Mapa en tonos claros</b>": carto
-     };
-
-    L.control.layers(baseMaps).addTo (map);
-
-	// Se crea un icono personalizado
-		var panIcon = L.icon({
-			iconUrl: 'pan_dulce.svg',
-			iconSize: [50,50]
-			});;
-			
-	// Se crea una capa de datos con marcadores y ventana emergente personalizados
-		var panaderias= L.geoJson(bd_pan2, {
-		    onEachFeature: onEachFeature,
-			pointToLayer: function(feature,latlng){
-			var marker = L.marker(latlng,{icon: panIcon});
-			////marker.bindPopup(feature.properties.nom_estab);  ////.bindPopup("Nombre: " + feature.properties.nom_estab);
-			return marker;
-			}});
-			////map.addLayer(panaderias) 
-
- ////Se crea y añade una capa de agrupación de marcadores   		
-	var clusters = L.markerClusterGroup({ showCoverageOnHover: false });
-	clusters.addLayer(panaderias);
-	map.addLayer(clusters);
-
-///// /////////////////         FUNCION MOUSE OVER / MOUSE OUT
-
- function onEachFeature(feature, layer) {
-        layer.bindPopup("<b>" +feature.properties.nom_estab + "</b><br>");
-        layer.on('mouseover', function(e) {
-          this.openPopup();
-        });
-        layer.on('mouseout', function(e) {
-          this.closePopup();
-        });
-      }; 
-
-</script>
-
-</body>
-
+		<script src="map.js"></script>
+	</body>
 </html>
